An attempt at using Kryo for serde